@@ -158,6 +158,7 @@ export(assn)
 export(atotal)
 export(auto)
 export(autonym)
+export(bca)
 export(bm)
 export(bm25)
 export(bm25f)
